[package]
name = "sol-balance-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
async-recursion = "1.1.1"
async-trait = "0.1.88"
clap = { version = "4.5.38", features = ["derive", "env"] }
futures = "0.3.31"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
